<resources>
    <string name="app_name">AeroNavMobile</string>
    <string name="quote">Where to Next</string>
    <string name="company_name">AeroNav</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Already">Already a user? Login.</string>
    <string name="nav_survey">Survey</string>
    <string name="nav_itineraries">Itineraries</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">Login</string>
    <string name="nav_github">GitHub Repository</string>
    <string name="start_date">Start Date (mm/dd/yyyy)</string>
    <string name="end_date">End Date (mm/dd/yyyy)</string>
    <string name="start_location">Start Location</string>
    <string name="destination_location">Destination Location</string>
</resources>