<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logout_icon"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_Survey"
            android:icon="@drawable/logout_icon"
            android:title="@string/nav_survey" />
        <item
            android:id="@+id/nav_itineraries"
            android:icon="@drawable/logout_icon"
            android:title="@string/nav_itineraries" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_profile">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/nav_login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/nav_logout" />
            </menu>
        </item>
    </group>

</menu>